--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
                 <div class="hero-front">
                     <div class="hero-front-text">
                         <article>
-                            <h1 class="hero-front-heading">Play Game Everytime <br> Always Be Winner <br> And Strong</h1>
-                            <p class="hero-front-description">Improve your gaming skills by playing games that are currently popular so that you don't go out of style, improve skills</p>
+                            <h1 class="hero-front-heading">Play Game Everytime <br> Always Be Winner <br> And Strong
+                            </h1>
+                            <p class="hero-front-description">Improve your gaming skills by playing games that are
+                                currently popular so that you don't go out of style, improve skills</p>
                             <button class="btn btn2">Get started</button>
                             <button class="btn btn3">Learn more</button>
                         </article>
@@ -127,16 +129,80 @@
                     <div class="bg-game-text">
                         <article>
                             <h1 class="hero-bg-heading">A War Game That <br> Will Get Your Adrenaline <br> Pumping</h1>
-                            <p class="hero-bg-description">This is the best that we present to you, we collect all over asia and we present it to you only for you, our special customer, this is an episode discussing the of various types of design</p>
+                            <p class="hero-bg-description">This is the best that we present to you, we collect all over
+                                asia and we present it to you only for you, our special customer, this is an episode
+                                discussing the of various types of design</p>
                             <button class="btn btn2 bg-button">Explore Now</button>
                             <button class="btn btn4 bg-button">Learn more</button>
                         </article>
                     </div>
                 </div>
-                <div class="hero-games-container4"></div>
+                <div class="hero-games-container4">
+                    <div class="weekly-games">
+                        <div class="weekly-games-heading">
+                            <h1>Game Recommendations for <br> You This Week</h1>
+                        </div>
+                        <div class="next-container">
+                            <div class="arrow-container">
+                                <div class="left-arrow"></div>
+                                <div class="right-arrow"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="games-of-the-week">
+                        <div class="conainer">
+                            <div class="sub-div">
+                                <div class="sub-img img1"></div>
+                                <div class="sub-text-div">
+                                    <h2>The World's Strongest Human Battle</h2>
+                                    <h3 class="game-genre">Action, Sport</h3>
+                                    <p class="sub-text">This is a game about the battle of the strongest humans on
+                                        Earth.</p>
+                                    <button class="download-btn">Download</button>
+                                </div>
+                            </div>
+                            <div class="sub-div">
+                                <div class="sub-img img2"></div>
+                                <div class="sub-text-div">
+                                    <h2>The World's Strongest Human Battle</h2>
+                                    <h3 class="game-genre">Action, Sport</h3>
+                                    <p class="sub-text">This is a game about the battle of the strongest humans on
+                                        Earth.</p>
+                                    <button class="download-btn">Download</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="conainer">
+                            <div class="sub-div">
+                                <div class="sub-img img3"></div>
+                                <div class="sub-text-div">
+                                    <h2>The World's Strongest Human Battle</h2>
+                                    <h3 class="game-genre">Action, Sport</h3>
+                                    <p class="sub-text">This is a game about the battle of the strongest humans on
+                                        Earth.</p>
+                                    <button class="download-btn">Download</button>
+                                </div>
+                            </div>
+                            <div class="sub-div">
+                                <div class="sub-img img4"></div>
+                                <div class="sub-text-div">
+                                    <h2>The World's Strongest Human Battle</h2>
+                                    <h3 class="game-genre">Action, Sport</h3>
+                                    <p class="sub-text">This is a game about the battle of the strongest humans on
+                                        Earth.</p>
+                                    <button class="download-btn">Download</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-        <section></section>
+        <section aria-label="most-played-games">
+            <div>
+                <h1>Most Played Games of The Year</h1>
+            </div>
+        </section>
         <section></section>
     </main>
 </body>
