--- a/index.html
+++ b/index.html
@@ -199,11 +199,79 @@
             </div>
         </section>
         <section aria-label="most-played-games">
-            <div>
-                <h1>Most Played Games of The Year</h1>
+            <div class="most-played-games">
+                <div class="">
+                    <h1 class="mp-game-heading">Most Played Games of The Year</h1>
+                </div>
+                <div class="mp-games-img">
+                    <div class="mpg-sub"></div>
+                    <div class="mpg-sub2">
+                        <div class="mpg-description">
+                            <p>We have data on most played games this year and as a result, games about battles and wars
+                                are very popular with gamers at this time, so we recommend this game into your cart to
+                                be used as your game.</p>
+                        </div>
+                        <div class="mpg-imgages">
+                            <div class="gm-img1"></div>
+                            <div class="gm-img2"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
-        <section></section>
+        <section aria-label="hero-footer">
+            <div class="hero-footer">
+                <article>
+                    <h1 class="hero-footer-heading">Have an Unforgrttable Experience</h1>
+                    <p class="hero-footer-description">Have an Unforgrttable Experience and play now to get attractive
+                        promos</p>
+                    <button class="btn f-btn">Get started</button>
+                </article>
+                <footer>
+                    <div class="footer">
+                        <div class="footer-logos">
+                            <img src="./Assets/Icons/Logo.svg" alt="f-logo">
+                            <p class="game-footer-text">Play losts of games here and subscribe right away</p>
+                            <div>
+                                <img class="socials" src="./Assets/Icons/facebook.svg" alt="facebook-logo">
+                                <img class="socials" src="./Assets/Icons/instagram.svg" alt="instagram-logo">
+                                <img class="socials" src="./Assets/Icons/twitter.svg" alt="twitter-logo">
+                            </div>
+                        </div>
+                        <div class="fbar">
+                            <ul class="footer-list">
+                                <li class="list-head">Articles</li>
+                                <li class="other">Crowdfunding</li>
+                                <li class="other">Website donations</li>
+                                <li class="other">Careers</li>
+                                <li class="other">Event registrations</li>
+                                <li class="other">Newsrooms</li>
+                            </ul>
+                            <ul class="footer-list">
+                                <li class="list-head">Leagues</li>
+                                <li class="other">Our story</li>
+                                <li class="other">Community driven</li>
+                                <li class="other">Our customer</li>
+                                <li class="other">Expert support</li>
+                            </ul>
+                            <ul class="footer-list">
+                                <li class="list-head">Team</li>
+                                <li class="other">About us</li>
+                                <li class="other">FAQs</li>
+                                <li class="other">Privacy & Policy</li>
+                                <li class="other">Help</li>
+                            </ul>
+                            <ul class="footer-list">
+                                <li class="list-head">Get In Touch</li>
+                                <li class="other">(704) 555-0127</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="empty-fbar"></div>
+                </footer>
+            </div>
+        </section>
     </main>
 </body>
 
